--- a/The District/accueil.html
+++ b/The District/accueil.html
@@ -155,7 +155,7 @@
       
       <img src="icons8-youtube-48.png" id="logoyoutube" alt="youtubelogo" title="youtubelogo" class="col-1">
 
-      <img src="facebook_cover_photo_1.png" id="bandereaubas" alt="facebooklogo" title="facebooklogo" class="col-6">
+      <img src="facebook_cover_photo_1-removebg-preview.png" id="bandereaubas" alt="bandereaubas" title="bandereaubas" class="col-6">
 
       <img src="icons8-instagram-48.png" id="logoinstagram" alt="instagramlogo" title="instagramlogo" class="col-1">
 
