--- a/The District/contact.html
+++ b/The District/contact.html
@@ -34,7 +34,7 @@
     
         <div class="container-fluid">
         <div class="row">
-          <img src="bg1.jpeg" alt="bandereau" title="bandereau" id="image" class="object-fit-cover border border-primary-subtle rounded">
+          <img src="bg1.jpeg" alt="bandereau" title="bandereau" id="image" class="col-6">
           </div>
           </div>
 
@@ -46,10 +46,14 @@
     <form>
       <div class="container">
         <div class="row">
-      <div class="mb-3">
-        <label for="NometPrenom" class="form-label" id="NometPrenom">Nom et prénom</label>
+      <div class="mb-3 col-6">
+        <label for="NometPrenom" class="form-label" id="NometPrenom">Nom</label>
         <input type="text" class="form-control">
     <p id="couleurtxt">Ce champ est obligatoire</p>
+      </div>
+      <div class="mb-3 col-6">
+        <label for="NometPrenom" class="form-label" id="NometPrenom">Prénom</label>
+        <input type="text" class="form-control">
       </div>
       <div class="mb-3 col-6">
         <label for="email" class="form-label" id="email">Email</label>
