--- a/The District/platsparcatégorie.html
+++ b/The District/platsparcatégorie.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catégorie</title>
+    <title>Plats par catégorie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="categorie.css">
+    <link rel="stylesheet" href="platsparcatégorie.css">
 </head>
 <body>
   <div class="container">
@@ -43,53 +43,90 @@
 <br>
 
 <div class="container">
-  <div class="row">
-
-<span class="col-4">
-  <div id="categorie1">
-  <img src="wrap_cat.jpg" id="wrap" alt="wrap" title="wrap">
-  <p>Wrap</p>
-  </div>
-</span>
-
-<span class="col-4">
-  <div id="categorie2">
-  <img src="sandwich_cat.jpg" id="sandwichcat" alt="sandwich" title="sandwich">
-  <p>Sandwich</p>
+    <div class="row">
+<p class="col-1" id="titre">Pizzas</p>
 </div>
-</span>
-    
-<span class="col-4">
-<div id="categorie3">
-  <img src="pizza_cat.jpg" id="pizzacat" alt="pizza" title="pizza">
-  <p>Pizza</p>
 </div>
-</span>
-
-<span class="col-4">
-  <div id="categorie4">
-    <img src="pasta_cat.jpg" id="pastacat" alt="pate" title="pate">
-    <p>Pâte</p>
-  </div>
-  </span>
-
-
-<span class="col-4">
-  <div id="categorie5">
-    <img src="burger_cat.jpg" id="brugercat" alt="burger" title="burger">
-    <p>Burger</p>
-  </div>
-  </span>
 
 
 
-<span class="col-4">
-  <div id="categorie6">
-    <img src="asian_food_cat.jpg" id="asianfood" alt="asianfood" title="asianfood">
-    <p>Asiatique</p>
-  </div>
-</span>
+<div class="container">
+    <div class="row justify-content-between">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="pizza-margherita.jpg" class="img-fluid rounded-start" alt="pizza-margherita">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Pizza Margarita</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <a href="#" class="btn btn-primary">Commander</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="pizza-salmon.png" class="img-fluid rounded-start" alt="pizza-salmon">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Pizza Saumon</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <a href="#" class="btn btn-primary">Commander</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+    </div>
 </div>
+
+
+
+<div class="container">
+    <div class="row justify-content-between">
+
+
+  <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="pizza.jpg" class="img-fluid rounded-start" alt="pizzaPPO">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Pizza PPO Poulet Patate Oignon</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="#" class="btn btn-primary">Commander</a>
+      </div>
+    </div>
+  </div>
+</div>
+  
+
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="Food-Name-8298.jpg" class="img-fluid rounded-start" alt="pizzaVeggie">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Commander</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
+
+
+
+
 
 <div class="row justify-content-between">
     <button type="button" class="btn btn-secondary col-3 m-5 p-0 rounded-pill bprecsuiv">Précédent</button>
