--- a/The District/commande.html
+++ b/The District/commande.html
@@ -21,7 +21,7 @@
               <div class="navbar-nav">
                 <a class="nav-link mx-5 px-4 couleurbouton" aria-current="page" href="index.html">Accueil</a>
                 <a class="nav-link mx-5 px-4 couleurbouton" href="categorie.html">Catégorie</a>
-                <a class="nav-link mx-5 px-4 couleurbouton" href="plat.html">Plats</a>
+                <a class="nav-link mx-5 px-4 couleurbouton" href="touslesplats.html">Plats</a>
                 <a class="nav-link mx-5 px-4 couleurbouton" href="contact.html">Contact</a>
               </div>
             </div>
@@ -34,17 +34,38 @@
     <section class="container" id="background-img"><br>
 <div class="row justify-content-center">
 
-<div id="rectangleviolet" class="col-6 g-0">
-    <!-- <div class="container p-0"> -->
+<div class="container">
+  <div class="row justify-content-center g-0">
+  <div class="card mb-3" style="max-width: 580px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="assets/img/food/cheesburger.jpg" class="img-fluid border border-dark border-4" alt="cheesburger">
+    </div>
+    <div class="col-md-8 cardscolor">
+      <div class="card-body">
+        <h5 class="card-title txtcolor">Cheesburger</h5>
+        <p class="card-text txtcolor">Booooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooof ?</p>
+        <a href="#" class="btn btn-primary">Commander</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+
+<!--<div id="rectangleviolet" class="col-6 g-0">
+    
       <div class="container p-0">
         <div class="row">
         <img src="assets/img/food/pizza-margherita.jpg" alt="pizza-margherita" title="pizza-margherita" id="imgcommande" class="col-1">
-        <!--<div id="text1" class="col-2">--><div class="col-2 txtrectangle">Nom du plat</div>
+        <div class="col-2 txtrectangle">Nom du plat</div>
         <div class="col-3 txtrectangle">Description du plat</div>
-        <!--<p id="text2">--><div class="col-2 justify-content-end mt-5 pt-5 txtrectangle">Quantité</div>
+        <div class="col-2 justify-content-end mt-5 pt-5 txtrectangle">Quantité</div>
         </div>
     </div>
-</div>
+</div>-->
+
 </div>
 
 <br><br>
