--- a/The District/contact.html
+++ b/The District/contact.html
@@ -22,16 +22,14 @@
                   <div class="navbar-nav">
                     <a class="nav-link mx-5 px-4 couleurbouton" aria-current="page" href="index.html">Accueil</a>
                     <a class="nav-link mx-5 px-4 couleurbouton" href="categorie.html">Catégorie</a>
-                    <a class="nav-link mx-5 px-4 couleurbouton" href="plat.html">Plat</a>
+                    <a class="nav-link mx-5 px-4 couleurbouton" href="touslesplats.html">Plats</a>
                     <a class="nav-link mx-5 px-4 couleurbouton" href="contact.html">Contact</a>
                   </div>
                 </div>
               </div>
             </nav>
         </header>
-    
-        <br>
-    
+  
         <div class="container-fluid">
         <div class="row">
           <img src="assets/img/bg1.jpeg" alt="bandereau" title="bandereau" id="image" class="col-6">
