--- a/The District/categorie.html
+++ b/The District/categorie.html
@@ -21,15 +21,13 @@
           <div class="navbar-nav">
             <a class="nav-link mx-5 px-4 couleurbouton" aria-current="page" href="index.html">Accueil</a>
             <a class="nav-link mx-5 px-4 couleurbouton" href="categorie.html">Catégorie</a>
-            <a class="nav-link mx-5 px-4 couleurbouton" href="plat.html">Plats</a>
+            <a class="nav-link mx-5 px-4 couleurbouton" href="touslesplats.html">Plats</a>
             <a class="nav-link mx-5 px-4 couleurbouton" href="contact.html">Contact</a>
           </div>
         </div>
       </div>
     </nav>
   </header>
-
-
 
   <div class="container-fluid">
     <div class="row">
