--- a/The District/index.html
+++ b/The District/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
     <title>Accueil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/accueil.css">
@@ -21,7 +21,7 @@
           <div class="navbar-nav">
             <a class="nav-link mx-5 px-4 couleurbouton" aria-current="page" href="index.html">Accueil</a>
             <a class="nav-link mx-5 px-4 couleurbouton" href="categorie.html">Catégorie</a>
-            <a class="nav-link mx-5 px-4 couleurbouton" href="plat.html">Plats</a>
+            <a class="nav-link mx-5 px-4 couleurbouton" href="touslesplats.html">Plats</a>
             <a class="nav-link mx-5 px-4 couleurbouton" href="contact.html">Contact</a>
           </div>
         </div>
@@ -64,10 +64,10 @@
   </div>
   </section>
 
+  <br>
     
+<div class="parallax">
 
-
-<br>
 
 <div class="container">
   <div class="row">
@@ -140,6 +140,8 @@
   </span>
 
 </div>
+</div>
+
 </div>
 
 <br>
