--- a/The District/touslesplats.html
+++ b/The District/touslesplats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plats par catégorie Pizzas</title>
+    <title>Tous les plats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/platsparcatégorie.css">
 </head>
@@ -21,7 +21,7 @@
           <div class="navbar-nav">
             <a class="nav-link mx-5 px-4 couleurbouton" aria-current="page" href="index.html">Accueil</a>
             <a class="nav-link mx-5 px-4 couleurbouton" href="categorie.html">Catégorie</a>
-            <a class="nav-link mx-5 px-4 couleurbouton" href="plat.html">Plats</a>
+            <a class="nav-link mx-5 px-4 couleurbouton" href="touslesplats.html">Plats</a>
             <a class="nav-link mx-5 px-4 couleurbouton" href="contact.html">Contact</a>
           </div>
         </div>
@@ -42,11 +42,11 @@
                 <div class="card mb-3" style="max-width: 580px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="assets/img/food/pizza-margherita.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizza-margherita">
+                        <img src="assets/img/food/cheesburger.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizza-margherita">
                       </div>
                       <div class="col-md-8 cardscolor">
                         <div class="card-body">
-                          <h5 class="card-title txtcolor">Pizza Margarita</h5>
+                          <h5 class="card-title txtcolor">Cheesburger</h5>
                           <p class="card-text txtcolor">Booooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooof ?</p>
                             <div class="d-flex justify-content-end">
                           <a href="#" class="btn btn-primary">Commander</a>
@@ -59,11 +59,11 @@
                   <div class="card mb-3" style="max-width: 580px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="assets/img/food/pizza-salmon.png" class="img-fluid rounded-start border border-dark border-4" alt="pizza-salmon">
+                        <img src="assets/img/food/hamburger.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizza-salmon">
                       </div>
                       <div class="col-md-8 cardscolor">
                         <div class="card-body">
-                          <h5 class="card-title txtcolor">Pizza Saumon</h5>
+                          <h5 class="card-title txtcolor">Hamburger Bacon</h5>
                           <p class="card-text txtcolor">Booooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooof ?</p>
                           <div class="d-flex justify-content-end">
                             <a href="#" class="btn btn-primary">Commander</a>
@@ -84,11 +84,11 @@
   <div class="card mb-3" style="max-width: 580px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="assets/img/category/pizza_cat.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaPPO">
+      <img src="assets/img/food/Food-Name-6340.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaPPO">
     </div>
     <div class="col-md-8 cardscolor">
       <div class="card-body">
-        <h5 class="card-title txtcolor">Pizza PPO Poulet-Patates-Oignons</h5>
+        <h5 class="card-title txtcolor">Hamburger Steak</h5>
         <p class="card-text txtcolor">Booooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooof ?</p>
         <div class="d-flex justify-content-end">
           <a href="#" class="btn btn-primary">Commander</a>
@@ -102,11 +102,11 @@
 <div class="card mb-3" style="max-width: 580px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="assets/img/food/Food-Name-8298.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaVeggie">
+        <img src="assets/img/food/Food-Name-433.jpeg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaVeggie">
       </div>
       <div class="col-md-8 cardscolor">
         <div class="card-body">
-          <h5 class="card-title txtcolor">Pizza Veggie</h5>
+          <h5 class="card-title txtcolor">Big Mac</h5>
           <p class="card-text txtcolor">Booooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooof ?</p>
           <div class="d-flex justify-content-end">
             <a href="#" class="btn btn-primary">Commander</a>
