--- a/The District/commande.html
+++ b/The District/commande.html
@@ -31,7 +31,7 @@
 
     <br>
 
-    <section class="container" id="background-img"><br>
+    <div class="container" id="background-img"><br>
 <div class="row justify-content-center">
 
 <div class="container">
@@ -106,8 +106,9 @@
 </div>
 </form>
 
+<br>
 
-</section>
+</div>
         
     <br>
 
@@ -137,5 +138,6 @@
 
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="assets/js/commande.js"></script>
 </body>
 </html>
