--- a/The District/index.html
+++ b/The District/index.html
@@ -64,8 +64,6 @@
   </div>
   </section>
 
-  <br>
-    
 <div class="parallax">
 
 
@@ -117,7 +115,45 @@
   </div>
   </span>
 
-<span class="col-4">
+
+  <div class="container">
+    <div class="row">
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/img/food/pizza-margherita.jpg" class="d-block w-40" alt="pizza-margherita" id="pizzamargarita">
+        <p id="plat1">Pizza Margarita</p><br>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/food/hamburger.jpg" class="d-block w-40" alt="hamburger" id="hamburger">
+        <p id="plat2">Hamburger Bacon</p><br>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/food/spaghetti-legumes.jpg" class="d-block w-40" alt="spaghetti" id="spaghetti">
+        <p id="plat3">Spaghetti Légumes</p><br>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Précédent</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden boutondefilement">Suivant</span>
+    </button>
+  </div>
+</div>
+</div>
+
+
+
+
+<!--<span class="col-4">
   <div id="plat1">
     <img src="assets/img/food/pizza-margherita.jpg" id="pizzamargarita" alt="pizzamargarita" title="pizzamargarita">
     <p>Plat 1</p>
@@ -137,7 +173,8 @@
     <img src="assets/img/food/spaghetti-legumes.jpg" id="spaghetti" alt="spaghetti" title="spaghetti">
     <p>Plat 3</p>
   </div>
-  </span>
+  </span>-->
+
 
 </div>
 </div>
@@ -170,18 +207,8 @@
   </div>
 </footer>
 
-
-
-
-
-
-
-
-
-
-
-
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
 </body>
 </html>
