--- a/The District/platsparcatégorie.html
+++ b/The District/platsparcatégorie.html
@@ -42,10 +42,9 @@
 
 <div class="container m-3">
     <div class="row">
-<p class="col-1" id="titre">Pizzas</p>
+<p class="col-6 col-lg-1" id="titre">Pizzas</p>
 </div>
 </div>
-
 
 
 <div class="container">
