--- a/The District/index.html
+++ b/The District/index.html
@@ -67,7 +67,7 @@
   </div>
   </section>
 
-<div class="parallax">
+<div class="parallax col-14 col-sm-12">
 
 <div class="container">
   <div class="row">
