--- a/Total War Warhammer/factions.html
+++ b/Total War Warhammer/factions.html
@@ -21,8 +21,8 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <div class="navbar-nav">
-                                <a class="nav-link mx-5 px-4 border border-0 rounded-pill text-center fw-bold w-50 col-3 buttoncolor" aria-current="page" href="#">Carte</a>
-                                <a class="nav-link mx-5 px-4 border border-0 rounded-pill text-center fw-bold w-50 col-3 buttoncolor" href="#">Factions</a>
+                                <a class="nav-link mx-5 px-4 border border-0 rounded-pill text-center fw-bold w-50 col-3 buttoncolor" aria-current="page" href="map.html">Carte</a>
+                                <a class="nav-link mx-5 px-4 border border-0 rounded-pill text-center fw-bold w-50 col-3 buttoncolor" href="factions.html">Factions</a>
                             </div>
                             
                             <div class="container">
