--- a/Total War Warhammer/index.html
+++ b/Total War Warhammer/index.html
@@ -13,20 +13,20 @@
     <div class="container">
 
         <header>
-            <nav class="navbar navbar-expand-lg bg-dark">
+            <nav class="navbar navbar-expand-lg backgroundHeader">
               <div class="container-fluid">
-                <img src="assets/img/Logo_Total_War_Warhammer.png" alt="logo" width="200" height="110" class="mx-3" class="img-fluid">
+                <img src="assets/img/Logo_Total_War_Warhammer.png" alt="logo" width="200" height="110" class="mx-3" class="img-fluid col-2">
                 <button class="navbar-toggler couleurbouton" id="boutonderoulant" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-link mx-2 px-2 border border-0 rounded-pill text-center fw-bold w-25 buttoncolor" aria-current="page" href="index.html">Accueil</a>
-                    <a class="nav-link mx-2 px-2 border border-0 rounded-pill text-center fw-bold w-25 buttoncolor" href="categorie.html">Carte</a>
-                    <a class="nav-link mx-2 px-2 border border-0 rounded-pill text-center fw-bold w-25 buttoncolor">Factions</a>
-                    <form class="d-flex w-50" role="search">
-                        <input class="form-control me-2 mx-5 searchcolor border-0 col-3" type="search" placeholder="Recherchez..." aria-label="Search">
-                        <button class="btn me-2 border buttoncolor border-0 fw-bold" type="submit">Valider</button>
+                    <a class="nav-link mx-2 px-2 border border-0 rounded-pill text-center fw-bold w-25 buttoncolor col-2" aria-current="page" href="index.html">Accueil</a>
+                    <a class="nav-link mx-2 px-2 border border-0 rounded-pill text-center fw-bold w-25 buttoncolor col-2" href="map.html">Carte</a>
+                    <a class="nav-link mx-2 px-2 border border-0 rounded-pill text-center fw-bold w-25 buttoncolor col-2" href="liste-des-factions.html">Factions</a>
+                    <form class="d-flex jus w-50" role="search">
+                        <input class="form-control me-5 mx-5 searchcolor border-0 col-2" type="search" placeholder="Recherchez..." aria-label="Search">
+                        <button class="btn me-4 border buttoncolor border-0 fw-bold col-8" type="submit">Valider</button>
                       </form>
                   </div>
                 </div>
@@ -70,24 +70,24 @@
     <div class="row justify-content-between">
         <!--<div class="container">
         <div class="row d-flex justify-content-start">-->
-<img src="assets/img/426-4263598_games-workshop-hd-png-download.png" alt="logoGamesWorkshop" title="logoGamesWorkshop" class="col-1">
+<img src="assets/img/426-4263598_games-workshop-hd-png-download.png" alt="logoGamesWorkshop" title="logoGamesWorkshop" class="col-2">
 <!--</div>
 </div>-->
 
 <!--<div class="container">
 <div class="row d-flex justify-content-center align-middle">-->
-<img src="assets/img/Logos_réseaux_sociaux/icons8-instagram-48.png" alt="logoInstagram" title="logoInstagram" class="col-1">
-<img src="assets/img/Logos_réseaux_sociaux/icons8-youtube-48.png" alt="logoYoutube" title="logoYoutube" class="col-1">
-<img src="assets/img/Logos_réseaux_sociaux/icons8-reddit-48.png" alt="logoReddit" title="logoReddit" class="col-1">
-<img src="assets/img/Logos_réseaux_sociaux/icons8-logo-google-48.png" alt="logoGoogle" title="logoGoogle" class="col-1">
-<img src="assets/img/Logos_réseaux_sociaux/icons8-facebook-48.png" alt="logoFacebook" title="logoGoogle" class="col-1">
-<img src="assets/img/Logos_réseaux_sociaux/icons8-twitter-48.png" alt="logoTwitter" title="logoTwitter" class="col-1">
+<img src="assets/img/Logos_réseaux_sociaux/icons8-instagram-48.png" alt="logoInstagram" title="logoInstagram" class="col-1 logoRS">
+<img src="assets/img/Logos_réseaux_sociaux/icons8-youtube-48.png" alt="logoYoutube" title="logoYoutube" class="col-1 logoRS">
+<img src="assets/img/Logos_réseaux_sociaux/icons8-reddit-48.png" alt="logoReddit" title="logoReddit" class="col-1 logoRS">
+<img src="assets/img/Logos_réseaux_sociaux/icons8-logo-google-48.png" alt="logoGoogle" title="logoGoogle" class="col-1 logoRS">
+<img src="assets/img/Logos_réseaux_sociaux/icons8-facebook-48.png" alt="logoFacebook" title="logoGoogle" class="col-1 logoRS">
+<img src="assets/img/Logos_réseaux_sociaux/icons8-twitter-48.png" alt="logoTwitter" title="logoTwitter" class="col-1 logoRS">
 <!--</div>
 </div>-->
 
 <!--<div class="container">
 <div class="row justify-content-end">-->
-<img src="assets/img/The_Creative_Assembly.png" alt="logoCreativeAssembly" title="logoCreativeAssembly" class="col-1">
+<img src="assets/img/The_Creative_Assembly.png" alt="logoCreativeAssembly" title="logoCreativeAssembly" class="col-2">
 <!--</div>
 </div>-->
 
