--- a/The District/commande.html
+++ b/The District/commande.html
@@ -71,27 +71,27 @@
 
 <br><br>
 
-<form id="formulaire" method="post">
-  <div class="container">
+<div class="container">
+    <form id="formulaire" action="scriptformulaire.php" method="post">
     <div class="row">
   <div class="mb-3">
     <label for="NometPrenom" class="form-label" id="NometPrenomCSS">Nom et prénom</label>
-    <input type="text" class="form-control" id="NometPrenomJS">
+    <input type="text" name="NometPrenom" class="form-control" id="NometPrenomJS">
 <p id="couleurtxt">Ce champ est obligatoire</p>
   </div>
   <div class="mb-3 col-6">
     <label for="email" class="form-label" id="emailCSS">Email</label>
-    <input type="email" class="form-control" id="emailJS">
+    <input type="email" name="email" class="form-control" id="emailJS">
 <p id="couleurtxt">Ce champ est obligatoire</p>
   </div>
   <div class="mb-3 col-6">
     <label for="telephone" class="form-label" id="telephoneCSS">Téléphone</label>
-    <input type="text" class="form-control" id="telephoneJS">
+    <input type="text" name="telephone" class="form-control" id="telephoneJS">
 <p id="couleurtxt">Ce champ est obligatoire</p>
   </div>
   <div class="mb-3">
     <label for="votreadresse" class="form-label" id="votreadresseCSS">Votre adresse</label>
-    <textarea class="form-control" rows="3" id="votreadresseJS"></textarea>
+    <textarea class="form-control" name="votreadresse" rows="3" id="votreadresseJS"></textarea>
 <p id="couleurtxt">Ce champ est obligatoire</p>    
   </div>
 </div>
