--- a/The District/contact.html
+++ b/The District/contact.html
@@ -42,8 +42,8 @@
     
     <br><br><br><br><br><br>
     
-    <form id="formulaire" method="post">
       <div class="container">
+        <form id="formulaire" action="scriptformulairecontact.php" method="post"></form>
         <div class="row">
       <div class="mb-3 col-6">
         <label for="NometPrenom" class="form-label" id="NometPrenomCSS">Nom</label>
