--- a/The District/index.html
+++ b/The District/index.html
@@ -63,7 +63,7 @@
 </form> -->
 <div class="container-fluid">
 <div class="row">
-  <video src="assets/img/852299-hd_1280_720_30fps.mp4" loop autoplay muted alt="video_pizza" title="bandereau" id="video" class="object-fit-cover border border-primary-subtle rounded">
+  <video src="assets/img/852299-hd_1280_720_30fps.mp4" loop autoplay muted alt="video_pizza" title="bandereau" id="video" class="object-fit-cover border border-primary-subtle rounded"></video>
   </div>
   </div>
   </section>
