--- a/The District/touslesplats.html
+++ b/The District/touslesplats.html
@@ -40,7 +40,7 @@
 
 <div class="container">
     <div class="row justify-content-between g-0">
-                <div class="card mb-3" style="max-width: 580px;">
+                <div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="assets/img/food/cheesburger.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizza-margherita">
@@ -57,7 +57,7 @@
                     </div>
                   </div>
 
-                  <div class="card mb-3" style="max-width: 580px;">
+                  <div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="assets/img/food/hamburger.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizza-salmon">
@@ -82,7 +82,7 @@
     <div class="row justify-content-between g-0">
 
 
-  <div class="card mb-3" style="max-width: 580px;">
+  <div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
   <div class="row g-0">
     <div class="col-md-4">
       <img src="assets/img/food/Food-Name-6340.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaPPO">
@@ -100,7 +100,7 @@
 </div>
   
 
-<div class="card mb-3" style="max-width: 580px;">
+<div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
     <div class="row g-0">
       <div class="col-md-4">
         <img src="assets/img/food/Food-Name-433.jpeg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaVeggie">
