--- a/The District/platsparcatégorie.html
+++ b/The District/platsparcatégorie.html
@@ -50,7 +50,7 @@
 
 <div class="container">
     <div class="row justify-content-between g-0">
-                <div class="card mb-3" style="max-width: 580px;">
+                <div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="assets/img/food/pizza-margherita.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizza-margherita">
@@ -67,7 +67,7 @@
                     </div>
                   </div>
 
-                  <div class="card mb-3" style="max-width: 580px;">
+                  <div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="assets/img/food/pizza-salmon.png" class="img-fluid rounded-start border border-dark border-4" alt="pizza-salmon">
@@ -92,7 +92,7 @@
     <div class="row justify-content-between g-0">
 
 
-  <div class="card mb-3" style="max-width: 580px;">
+  <div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
   <div class="row g-0">
     <div class="col-md-4">
       <img src="assets/img/category/pizza_cat.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaPPO">
@@ -110,7 +110,7 @@
 </div>
   
 
-<div class="card mb-3" style="max-width: 580px;">
+<div class="card mb-3" style="max-width: 580px;"> <!--changer taille en col-->
     <div class="row g-0">
       <div class="col-md-4">
         <img src="assets/img/food/Food-Name-8298.jpg" class="img-fluid rounded-start border border-dark border-4" alt="pizzaVeggie">
